# voxclinbench

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  croissant.json  pyproject.toml  tasks.csv
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  submission.md
examples/: reproduce_wavlm_probe.py
predictions/: INDEX.md  README.md  b2ai.adhd.seed0.main.csv  b2ai.adhd.seed1.main.csv  b2ai.adhd.seed2.main.csv  b2ai.adhd.seed3.main.csv  b2ai.adhd.seed4.main.csv  b2ai.airway_stenosis.seed0.main.csv  b2ai.airway_stenosis.seed1.main.csv  b2ai.airway_stenosis.seed2.main.csv  b2ai.airway_stenosis.seed3.main.csv  b2ai.airway_stenosis.seed4.main.csv  b2ai.benign_lesions.seed0.main.csv  b2ai.benign_lesions.seed1.main.csv  b2ai.benign_lesions.seed2.main.csv  b2ai.benign_lesions.seed3.main.csv  b2ai.benign_lesions.seed4.main.csv  b2ai.chronic_cough.seed0.main.csv  b2ai.chronic_cough.seed1.main.csv  b2ai.chronic_cough.seed2.main.csv  b2ai.chronic_cough.seed3.main.csv  b2ai.chronic_cough.seed4.main.csv  b2ai.cognitive_impair.seed0.main.csv  b2ai.cognitive_impair.seed1.main.csv  b2ai.cognitive_impair.seed2.main.csv  b2ai.cognitive_impair.seed3.main.csv  b2ai.cognitive_impair.seed4.main.csv  b2ai.depression.seed0.main.csv  b2ai.depression.seed1.main.csv  b2ai.depression.seed2.main.csv  b2ai.depression.seed3.main.csv  b2ai.depression.seed4.main.csv  b2ai.laryngeal_dystonia.seed0.main.csv  b2ai.laryngeal_dystonia.seed1.main.csv  b2ai.laryngeal_dystonia.seed2.main.csv  b2ai.laryngeal_dystonia.seed3.main.csv  b2ai.laryngeal_dystonia.seed4.main.csv  b2ai.mtd.seed0.main.csv  b2ai.mtd.seed1.main.csv  b2ai.mtd.seed2.main.csv  (+27 more)
scripts/: build_manifests.py  build_release.py
splits/: INDEX.md  b2ai.tier1_aggregate.seed0.json  b2ai.tier2_aggregate.seed0.json  lodo.pd.test_neurovoz.seed0.json  lodo.pd.test_svd.seed0.json  lodo.vfp.test_svd.seed0.json  modma.depression.seed0.json
tests/: test_eval.py  test_splits.py
voxbench/: __init__.py  __main__.py  cli.py  config.py  eval.py  fetch.py  tasks.py  train.py
voxbench/baselines/: __init__.py
voxbench/data/: __init__.py  dataset.py  features.py  labels.py  splits.py
voxbench/model/: __init__.py  branches.py  classifier.py
voxbench/splits/: README.md  __init__.py  neurovoz_splitter.py
voxbench/training/: eval.py  loss.py  utils.py
