[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voxbench"
version = "0.2.0"
description = "VoxClinBench — cross-lingual, cross-disease clinical voice biomarker benchmark"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "VoxClinBench Contributors" }]
keywords = ["benchmark", "voice", "clinical", "ssl", "bridge2ai"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy>=1.24",
  "scikit-learn>=1.2",
  "scipy>=1.10",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.3"]
# Installing `voxbench[train]` pulls in the heavy deps required to run
# our reference baseline's training and preprocessing (data/ + model/ +
# training/ + train.py). Submitters bringing their OWN model do not
# need this extra — ``voxbench eval`` is pure numpy/sklearn/scipy.
train = [
  "torch>=2.0",
  "transformers>=4.40",
  "librosa>=0.10",
  "resampy>=0.4",
  "soundfile>=0.12",
  "h5py>=3.10",
  "pandas>=2.0",
  "tqdm>=4.66",
  "modal>=0.65",
]

[project.scripts]
voxbench = "voxbench.cli:main"

[tool.setuptools.packages.find]
include = ["voxbench*"]

[tool.setuptools.package-data]
voxbench = ["splits/*.json"]
